--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=gerade jetzt
-ml.timeago.oneminute=vor einer minute
-ml.timeago.xminutes=vor {0} minuten
-ml.timeago.aboutanhour=vor ungef\u00e4hr einer stunde
-ml.timeago.xhours=vor {0} stunden
-ml.timeago.oneday=vor einem tag
-ml.timeago.xdays=vor {0} tagen
-ml.timeago.aboutamonth=vor ungef\u00e4hr einem monat
-ml.timeago.xmonths=vor {0} monaten
-ml.timeago.aboutayear=vor etwa einem jahr
-ml.timeago.overayear=vor \u00fcber einem jahr
-ml.timeago.almosttwoyears=vor fast zwei jahren
-ml.timeago.xyears=vor {0} jahren
+ml.timeago.oneminute.past=vor einer minute
+ml.timeago.xminutes.past=vor {0} minuten
+ml.timeago.aboutanhour.past=vor ungef\u00E4hr einer stunde
+ml.timeago.xhours.past=vor {0} stunden
+ml.timeago.oneday.past=gestern
+ml.timeago.xdays.past=vor {0} tagen
+ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem monat
+ml.timeago.xmonths.past=vor {0} monaten
+ml.timeago.aboutayear.past=vor etwa einem jahr
+ml.timeago.overayear.past=vor \u00FCber einem jahr
+ml.timeago.almosttwoyears.past=vor fast zwei jahren
+ml.timeago.xyears.past=vor {0} jahren
+ml.timeago.oneminute.future=innerhalb einer minute
+ml.timeago.xminutes.future=innerhalb {0} minuten
+ml.timeago.aboutanhour.future=innerhalb von etwa einer stunde
+ml.timeago.xhours.future=innerhalb {0} stunden
+ml.timeago.oneday.future=morgen
+ml.timeago.xdays.future=innerhalb {0} tagen
+ml.timeago.aboutamonth.future=innerhalb von etwa einem monat
+ml.timeago.xmonths.future=innerhalb {0} monaten
+ml.timeago.aboutayear.future=innerhalb von etwa einem jahr
+ml.timeago.overayear.future=innerhalb eines jahres
+ml.timeago.almosttwoyears.future=innerhalb von fast zwei jahren
+ml.timeago.xyears.future=innerhalb {0} jahren
