--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=just now
-ml.timeago.oneminute=one minute ago
-ml.timeago.xminutes={0} minutes ago
-ml.timeago.aboutanhour=about an hour ago
-ml.timeago.xhours={0} hours ago
-ml.timeago.oneday=a day ago
-ml.timeago.xdays={0} days ago
-ml.timeago.aboutamonth=about a month ago
-ml.timeago.xmonths={0} months ago
-ml.timeago.aboutayear=about a year ago
-ml.timeago.overayear=over a year ago
-ml.timeago.almosttwoyears=almost two years ago
-ml.timeago.xyears={0} years ago
+ml.timeago.oneminute.past=one minute ago
+ml.timeago.xminutes.past={0} minutes ago
+ml.timeago.aboutanhour.past=about an hour ago
+ml.timeago.xhours.past={0} hours ago
+ml.timeago.oneday.past=yesterday
+ml.timeago.xdays.past={0} days ago
+ml.timeago.aboutamonth.past=about a month ago
+ml.timeago.xmonths.past={0} months ago
+ml.timeago.aboutayear.past=about a year ago
+ml.timeago.overayear.past=over a year ago
+ml.timeago.almosttwoyears.past=almost two years ago
+ml.timeago.xyears.past={0} years ago
+ml.timeago.oneminute.future=within one minute
+ml.timeago.xminutes.future=within {0} minutes
+ml.timeago.aboutanhour.future=within about an hour
+ml.timeago.xhours.future=within {0} hours
+ml.timeago.oneday.future=tomorrow
+ml.timeago.xdays.future=within {0} days
+ml.timeago.aboutamonth.future=within about a month
+ml.timeago.xmonths.future=within {0} months
+ml.timeago.aboutayear.future=within about a year
+ml.timeago.overayear.future=within over a year
+ml.timeago.almosttwoyears.future=within almost two years
+ml.timeago.xyears.future=within {0} years
