--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=justo ahora
-ml.timeago.oneminute=hace un minuto
-ml.timeago.xminutes=hace {0} minutos
-ml.timeago.aboutanhour=hace aproximadamente una hora
-ml.timeago.xhours=hace {0} horas
-ml.timeago.oneday=hace un d\u00eda
-ml.timeago.xdays=hace {0} d\u00edas
-ml.timeago.aboutamonth=hace m\u00e1s o menos un mes
-ml.timeago.xmonths=hace {0} meses
-ml.timeago.aboutayear=hace un a\u00f1o
-ml.timeago.overayear=hace m\u00e1s de un a\u00f1o
-ml.timeago.almosttwoyears=hace casi dos a\u00f1os
-ml.timeago.xyears=hace {0} a\u00f1os
+ml.timeago.oneminute.past=hace un minuto
+ml.timeago.xminutes.past=hace {0} minutos
+ml.timeago.aboutanhour.past=hace aprox. una hora
+ml.timeago.xhours.past=hace {0} horas
+ml.timeago.oneday.past=ayer
+ml.timeago.xdays.past=hace {0} d\u00EDas
+ml.timeago.aboutamonth.past=hace m\u00E1s o menos un mes
+ml.timeago.xmonths.past=hace {0} meses
+ml.timeago.aboutayear.past=hace un a\u00F1o
+ml.timeago.overayear.past=hace m\u00E1s de un a\u00F1o
+ml.timeago.almosttwoyears.past=hace casi dos a\u00F1os
+ml.timeago.xyears.past=hace {0} a\u00F1os
+ml.timeago.oneminute.future=dentro de un minuto
+ml.timeago.xminutes.future=dentro de {0} minutos
+ml.timeago.aboutanhour.future=dentro de una hora
+ml.timeago.xhours.future=dentro de {0} horas
+ml.timeago.oneday.future=ma\u00F1ana
+ml.timeago.xdays.future=dentro de {0} d\u00EDas
+ml.timeago.aboutamonth.future=dentro de un mes
+ml.timeago.xmonths.future=dentro de {0} meses
+ml.timeago.aboutayear.future=dentro de un a\u00F1o
+ml.timeago.overayear.future=dentro de un a\u00F1o
+ml.timeago.almosttwoyears.future=dentro de casi dos a\u00F1os
+ml.timeago.xyears.future=dentro de {0} a\u00F1os
