--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=juste maintenant
-ml.timeago.oneminute=il y a un minute
-ml.timeago.xminutes=il y a {0} minutes
-ml.timeago.aboutanhour=il y a \u00e0 peu pr\u00e8s une heure
-ml.timeago.xhours=il y a {0} heures
-ml.timeago.oneday=il y a un jour
-ml.timeago.xdays=il y a {0} jours
-ml.timeago.aboutamonth=il y a environ un mois
-ml.timeago.xmonths=il y a {0} mois
-ml.timeago.aboutayear=il ya environ un an
-ml.timeago.overayear=il ya plus d''un an
-ml.timeago.almosttwoyears=il y a pr\u00e8s de deux ans
-ml.timeago.xyears=il y a {0} ans
+ml.timeago.oneminute.past=il y a un minute
+ml.timeago.xminutes.past=il y a {0} minutes
+ml.timeago.aboutanhour.past=il y a \u00e0 peu pr\u00e8s une heure
+ml.timeago.xhours.past=il y a {0} heures
+ml.timeago.oneday.past=hier
+ml.timeago.xdays.past=il y a {0} jours
+ml.timeago.aboutamonth.past=il y a environ un mois
+ml.timeago.xmonths.past=il y a {0} mois
+ml.timeago.aboutayear.past=il ya environ un an
+ml.timeago.overayear.past=il ya plus d''un an
+ml.timeago.almosttwoyears.past=il y a pr\u00E8s de deux ans
+ml.timeago.xyears.past=il y a {0} ans
+ml.timeago.oneminute.future=en moins d''une minute
+ml.timeago.xminutes.future=dans les {0} minutes
+ml.timeago.aboutanhour.future=dans environ une heure
+ml.timeago.xhours.future=dans les {0} heures
+ml.timeago.oneday.future=demain
+ml.timeago.xdays.future=dans les {0} jours
+ml.timeago.aboutamonth.future=environ un mois
+ml.timeago.xmonths.future=dans les {0} mois
+ml.timeago.aboutayear.future=dans environ un an
+ml.timeago.overayear.future=dans un d\u00E9lai d''un an
+ml.timeago.almosttwoyears.future=dans pr\u00E8s de deux ans
+ml.timeago.xyears.future=dans les {0} ans
