--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=agora
-ml.timeago.oneminute=um minuto atr\u00e1s
-ml.timeago.xminutes={0} minutos atr\u00e1s
-ml.timeago.aboutanhour=cerca de uma hora atr\u00e1s
-ml.timeago.xhours={0} horas atr\u00e1s
-ml.timeago.oneday=um dia atr\u00e1s
-ml.timeago.xdays={0} dias atr\u00e1s
-ml.timeago.aboutamonth=cerca de um m\u00eas atr\u00e1s
-ml.timeago.xmonths={0} meses atr\u00e1s
-ml.timeago.aboutayear=cerca de um ano atr\u00e1s
-ml.timeago.overayear=mais de um ano atr\u00e1s
-ml.timeago.almosttwoyears=h\u00e1 quase dois anos
-ml.timeago.xyears={0} anos atr\u00e1s
+ml.timeago.oneminute.past=um minuto atr\u00E1s
+ml.timeago.xminutes.past={0} minutos atr\u00E1s
+ml.timeago.aboutanhour.past=cerca de uma hora atr\u00E1s
+ml.timeago.xhours.past={0} horas atr\u00E1s
+ml.timeago.oneday.past=ontem
+ml.timeago.xdays.past={0} dias atr\u00E1s
+ml.timeago.aboutamonth.past=cerca de um m\u00EAs atr\u00E1s
+ml.timeago.xmonths.past={0} meses atr\u00E1s
+ml.timeago.aboutayear.past=cerca de um ano atr\u00E1s
+ml.timeago.overayear.past=mais de um ano atr\u00E1s
+ml.timeago.almosttwoyears.past=h\u00E1 quase dois anos
+ml.timeago.xyears.past={0} anos atr\u00E1s
+ml.timeago.oneminute.future=dentro de um minuto
+ml.timeago.xminutes.future=dentro de {0} minutos
+ml.timeago.aboutanhour.future=dentro de uma hora
+ml.timeago.xhours.future=dentro de {0} horas
+ml.timeago.oneday.future=amanh\u00E3
+ml.timeago.xdays.future=dentro de {0} dias
+ml.timeago.aboutamonth.future=dentro de um m\u00EAs
+ml.timeago.xmonths.future=dentro de {0} meses
+ml.timeago.aboutayear.future=dentro de um ano
+ml.timeago.overayear.future=dentro de um ano
+ml.timeago.almosttwoyears.future=dentro de quase dois anos
+ml.timeago.xyears.future=dentro de {0} anos
