--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
@@ -16,15 +16,27 @@
 #
 
 ml.timeago.now=proprio adesso
-ml.timeago.oneminute=uno giorno fa
-ml.timeago.xminutes={0} minuti fa
-ml.timeago.aboutanhour=circa un''ora fa
-ml.timeago.xhours={0} ore fa
-ml.timeago.oneday=uno giorno fa
-ml.timeago.xdays={0} giorni fa
-ml.timeago.aboutamonth=circa un mese fa
-ml.timeago.xmonths={0} mesi fa
-ml.timeago.aboutayear=circa un anno fa
-ml.timeago.overayear=pi\u00f9 di un anno fa
-ml.timeago.almosttwoyears=quasi due anni fa
-ml.timeago.xyears={0} anni fa
+ml.timeago.oneminute.past=uno giorno fa
+ml.timeago.xminutes.past={0} minuti fa
+ml.timeago.aboutanhour.past=circa un''ora fa
+ml.timeago.xhours.past={0} ore fa
+ml.timeago.oneday.past=ieri
+ml.timeago.xdays.past={0} giorni fa
+ml.timeago.aboutamonth.past=circa un mese fa
+ml.timeago.xmonths.past={0} mesi fa
+ml.timeago.aboutayear.past=circa un anno fa
+ml.timeago.overayear.past=pi\u00F9 di un anno fa
+ml.timeago.almosttwoyears.past=quasi due anni fa
+ml.timeago.xyears.past={0} anni fa
+ml.timeago.oneminute.future=entro un minuto
+ml.timeago.xminutes.future=entro {0} minuti
+ml.timeago.aboutanhour.future=a circa un''ora
+ml.timeago.xhours.future=entro {0} ore
+ml.timeago.oneday.future=domani
+ml.timeago.xdays.future=entro {0} giorni
+ml.timeago.aboutamonth.future=entro circa un mese
+ml.timeago.xmonths.future=entro {0} mesi
+ml.timeago.aboutayear.future=entro circa un anno
+ml.timeago.overayear.future=entro un anno
+ml.timeago.almosttwoyears.future=entro quasi due anni
+ml.timeago.xyears.future=entro {0} anni
