Fix some double-simple-quotes

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -15,7 +15,7 @@
 # under the License.
 #
 
-ml.timeago.now=à l''instant
+ml.timeago.now=à l'instant
 ml.timeago.oneminute.past=il y a un minute
 ml.timeago.xminutes.past=il y a {0} minutes
 ml.timeago.aboutanhour.past=il y a \u00e0 peu pr\u00e8s une heure
@@ -25,10 +25,10 @@ ml.timeago.xdays.past=il y a {0} jours
 ml.timeago.aboutamonth.past=il y a environ un mois
 ml.timeago.xmonths.past=il y a {0} mois
 ml.timeago.aboutayear.past=il y a environ un an
-ml.timeago.overayear.past=il y a plus d''un an
+ml.timeago.overayear.past=il y a plus d'un an
 ml.timeago.almosttwoyears.past=il y a pr\u00E8s de deux ans
 ml.timeago.xyears.past=il y a {0} ans
-ml.timeago.oneminute.future=dans moins d''une minute
+ml.timeago.oneminute.future=dans moins d'une minute
 ml.timeago.xminutes.future=dans {0} minutes
 ml.timeago.aboutanhour.future=dans environ une heure
 ml.timeago.xhours.future=dans {0} heures
@@ -37,6 +37,6 @@ ml.timeago.xdays.future=dans {0} jours
 ml.timeago.aboutamonth.future=environ un mois
 ml.timeago.xmonths.future=dans {0} mois
 ml.timeago.aboutayear.future=dans environ un an
-ml.timeago.overayear.future=dans plus d''un an
+ml.timeago.overayear.future=dans plus d'un an
 ml.timeago.almosttwoyears.future=dans pr\u00E8s de deux ans
 ml.timeago.xyears.future=dans {0} ans
