Capitalize first letter of German nouns

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -16,27 +16,27 @@
 #
 
 ml.timeago.now=gerade jetzt
-ml.timeago.oneminute.past=vor einer minute
-ml.timeago.xminutes.past=vor {0} minuten
-ml.timeago.aboutanhour.past=vor ungef\u00E4hr einer stunde
-ml.timeago.xhours.past=vor {0} stunden
+ml.timeago.oneminute.past=vor einer Minute
+ml.timeago.xminutes.past=vor {0} Minuten
+ml.timeago.aboutanhour.past=vor ungef\u00E4hr einer Stunde
+ml.timeago.xhours.past=vor {0} Stunden
 ml.timeago.oneday.past=gestern
-ml.timeago.xdays.past=vor {0} tagen
-ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem monat
-ml.timeago.xmonths.past=vor {0} monaten
-ml.timeago.aboutayear.past=vor etwa einem jahr
-ml.timeago.overayear.past=vor \u00FCber einem jahr
-ml.timeago.almosttwoyears.past=vor fast zwei jahren
-ml.timeago.xyears.past=vor {0} jahren
-ml.timeago.oneminute.future=innerhalb einer minute
-ml.timeago.xminutes.future=innerhalb {0} minuten
-ml.timeago.aboutanhour.future=innerhalb von etwa einer stunde
-ml.timeago.xhours.future=innerhalb {0} stunden
+ml.timeago.xdays.past=vor {0} Tagen
+ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem Monat
+ml.timeago.xmonths.past=vor {0} Monaten
+ml.timeago.aboutayear.past=vor etwa einem Jahr
+ml.timeago.overayear.past=vor \u00FCber einem Jahr
+ml.timeago.almosttwoyears.past=vor fast zwei Jahren
+ml.timeago.xyears.past=vor {0} Jahren
+ml.timeago.oneminute.future=innerhalb einer Minute
+ml.timeago.xminutes.future=innerhalb {0} Minuten
+ml.timeago.aboutanhour.future=innerhalb von etwa einer Stunde
+ml.timeago.xhours.future=innerhalb {0} Stunden
 ml.timeago.oneday.future=morgen
-ml.timeago.xdays.future=innerhalb {0} tagen
-ml.timeago.aboutamonth.future=innerhalb von etwa einem monat
-ml.timeago.xmonths.future=innerhalb {0} monaten
-ml.timeago.aboutayear.future=innerhalb von etwa einem jahr
-ml.timeago.overayear.future=innerhalb eines jahres
-ml.timeago.almosttwoyears.future=innerhalb von fast zwei jahren
-ml.timeago.xyears.future=innerhalb {0} jahren
+ml.timeago.xdays.future=innerhalb {0} Tagen
+ml.timeago.aboutamonth.future=innerhalb von etwa einem Monat
+ml.timeago.xmonths.future=innerhalb {0} Monaten
+ml.timeago.aboutayear.future=innerhalb von etwa einem Jahr
+ml.timeago.overayear.future=innerhalb eines Jahres
+ml.timeago.almosttwoyears.future=innerhalb von fast zwei Jahren
+ml.timeago.xyears.future=innerhalb {0} Jahren
