- add persian language support - fix english "minut" word

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages.properties
@@ -27,7 +27,7 @@ ml.timeago.aboutayear.past=about a year ago
 ml.timeago.overayear.past=over a year ago
 ml.timeago.almosttwoyears.past=almost two years ago
 ml.timeago.xyears.past={0} years ago
-ml.timeago.oneminute.future=within one minut
+ml.timeago.oneminute.future=within one minute
 ml.timeago.xminutes.future=within {0} minutes
 ml.timeago.aboutanhour.future=within about an hour
 ml.timeago.xhours.future=within {0} hours
