[v-4.0.2] fixed some messages in french and arabic

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -15,8 +15,8 @@
 # under the License.
 #
 
-ml.timeago.now=الان
-ml.timeago.oneminute.past=منذ دقيقه
+ml.timeago.now=الآن
+ml.timeago.oneminute.past=منذ دقيقة
 ml.timeago.xminutes.past= منذ {0} دقائق
 ml.timeago.aboutanhour.past=من حوالي ساعه
 ml.timeago.xhours.past= من حوالى {0} ساعات
