--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -16,7 +16,7 @@
 #
 
 ml.timeago.now=à l'instant
-ml.timeago.oneminute.past=il y a un minute
+ml.timeago.oneminute.past=il y a une minute
 ml.timeago.xminutes.past=il y a {0} minutes
 ml.timeago.aboutanhour.past=il y a \u00e0 peu pr\u00e8s une heure
 ml.timeago.xhours.past=il y a {0} heures
