--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=omkring en time siden
 ml.timeago.xhours.past={0} timer siden
 ml.timeago.oneday.past=i går
 ml.timeago.xdays.past={0} dage siden
+ml.timeago.oneweek.past=en uge siden
 ml.timeago.aboutamonth.past=omkring en måned siden
 ml.timeago.xmonths.past={0} måneder siden
 ml.timeago.aboutayear.past=omkring et år siden
