--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=orain dela ordu bat
 ml.timeago.xhours.past=orain dela {0} ordu
 ml.timeago.oneday.past=atzo
 ml.timeago.xdays.past=orain dela {0} egun
+ml.timeago.oneweek.past=duela aste bat
 ml.timeago.aboutamonth.past=orain dela hile bat
 ml.timeago.xmonths.past=orain dela {0} hile
 ml.timeago.aboutayear.past=orain dela urte bat
