--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=حدود یک ساعت پیش
 ml.timeago.xhours.past={0} ساعت پیش
 ml.timeago.oneday.past=دیروز
 ml.timeago.xdays.past={0} روز پیش
+ml.timeago.oneweek.past=یک هفته پیش
 ml.timeago.aboutamonth.past=حدود یک ماه پیش
 ml.timeago.xmonths.past={0} ماه پیش
 ml.timeago.aboutayear.past=حدود یک سال پیش
