--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=il y a \u00e0 peu pr\u00e8s une heure
 ml.timeago.xhours.past=il y a {0} heures
 ml.timeago.oneday.past=hier
 ml.timeago.xdays.past=il y a {0} jours
+ml.timeago.oneweek.past=il y a une semaine
 ml.timeago.aboutamonth.past=il y a environ un mois
 ml.timeago.xmonths.past=il y a {0} mois
 ml.timeago.aboutayear.past=il y a environ un an
