--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=circa un''ora fa
 ml.timeago.xhours.past={0} ore fa
 ml.timeago.oneday.past=ieri
 ml.timeago.xdays.past={0} giorni fa
+ml.timeago.oneweek.past=una settimana fa
 ml.timeago.aboutamonth.past=circa un mese fa
 ml.timeago.xmonths.past={0} mesi fa
 ml.timeago.aboutayear.past=circa un anno fa
