--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=před hodinou
 ml.timeago.xhours.past=před {0} hodinami
 ml.timeago.oneday.past=včera
 ml.timeago.xdays.past=před {0} dny
+ml.timeago.oneweek.past=před týdnem
 ml.timeago.aboutamonth.past=před měsícem
 ml.timeago.xmonths.past=před {0} měsíci
 ml.timeago.aboutayear.past=před rokem
