--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=vor ungef\u00E4hr einer Stunde
 ml.timeago.xhours.past=vor {0} Stunden
 ml.timeago.oneday.past=gestern
 ml.timeago.xdays.past=vor {0} Tagen
+ml.timeago.oneweek.past=vor einer Woche
 ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem Monat
 ml.timeago.xmonths.past=vor {0} Monaten
 ml.timeago.aboutayear.past=vor etwa einem Jahr
