--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=about an hour ago
 ml.timeago.xhours.past={0} hours ago
 ml.timeago.oneday.past=yesterday
 ml.timeago.xdays.past={0} days ago
+ml.timeago.oneweek.past=a week ago
 ml.timeago.aboutamonth.past=about a month ago
 ml.timeago.xmonths.past={0} months ago
 ml.timeago.aboutayear.past=about a year ago
