--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
@@ -21,6 +21,7 @@ ml.timeago.aboutanhour.past=करीब एक घंटे पहले
 ml.timeago.xhours.past={0} घंटे पहले
 ml.timeago.oneday.past=कल
 ml.timeago.xdays.past={0} दिन पहले
+ml.timeago.oneweek.past=एक हफ्ते पहले
 ml.timeago.aboutamonth.past=करीब 1 महीने पहले
 ml.timeago.xmonths.past={0} महीने पहले
 ml.timeago.aboutayear.past=लगभग एक साल पहले
