Added message for property: ml.timeago.xweeks.past

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past=من حوالى {0} ساعات
 ml.timeago.oneday.past=أمس
 ml.timeago.xdays.past=منذ {0} أيام
 ml.timeago.oneweek.past=منذ أسبوع
+ml.timeago.xweeks.past=قبل {0} أسبوع
 ml.timeago.aboutamonth.past=منذ شهر
 ml.timeago.xmonths.past=منذ {0} أشهر
 ml.timeago.aboutayear.past=منذ سنة
