--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past=před {0} hodinami
 ml.timeago.oneday.past=včera
 ml.timeago.xdays.past=před {0} dny
 ml.timeago.oneweek.past=před týdnem
+ml.timeago.xweeks.past={0} týdny
 ml.timeago.aboutamonth.past=před měsícem
 ml.timeago.xmonths.past=před {0} měsíci
 ml.timeago.aboutayear.past=před rokem
