--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past=vor {0} Stunden
 ml.timeago.oneday.past=gestern
 ml.timeago.xdays.past=vor {0} Tagen
 ml.timeago.oneweek.past=vor einer Woche
+ml.timeago.xweeks.past=vor {0} Wochen
 ml.timeago.aboutamonth.past=vor ungef\u00E4hr einem Monat
 ml.timeago.xmonths.past=vor {0} Monaten
 ml.timeago.aboutayear.past=vor etwa einem Jahr
