--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past=hace {0} horas
 ml.timeago.oneday.past=ayer
 ml.timeago.xdays.past=hace {0} d\u00EDas
 ml.timeago.oneweek.past=hace una semana
+ml.timeago.xweeks.past={0} semanas atrás
 ml.timeago.aboutamonth.past=hace m\u00E1s o menos un mes
 ml.timeago.xmonths.past=hace {0} meses
 ml.timeago.aboutayear.past=hace un a\u00F1o
