--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past=orain dela {0} ordu
 ml.timeago.oneday.past=atzo
 ml.timeago.xdays.past=orain dela {0} egun
 ml.timeago.oneweek.past=duela aste bat
+ml.timeago.xweeks.past=duela {0} aste
 ml.timeago.aboutamonth.past=orain dela hile bat
 ml.timeago.xmonths.past=orain dela {0} hile
 ml.timeago.aboutayear.past=orain dela urte bat
