--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
@@ -23,6 +23,7 @@ ml.timeago.xhours.past={0} uur geleden
 ml.timeago.oneday.past=gisteren
 ml.timeago.xdays.past={0} dagen geleden
 ml.timeago.oneweek.past=een week geleden
+ml.timeago.xweeks.past={0} weken geleden
 ml.timeago.aboutamonth.past=een maand geleden
 ml.timeago.xmonths.past={0} maanden geleden
 ml.timeago.aboutayear.past=een jaar geleden
