--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past={0} horas atr\u00E1s
 ml.timeago.oneday.past=ontem
 ml.timeago.xdays.past={0} dias atr\u00E1s
 ml.timeago.oneweek.past=faz uma semana
+ml.timeago.xweeks.past={0} semanas atrás
 ml.timeago.aboutamonth.past=cerca de um m\u00EAs atr\u00E1s
 ml.timeago.xmonths.past={0} meses atr\u00E1s
 ml.timeago.aboutayear.past=cerca de um ano atr\u00E1s
