--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past={0} saat önce
 ml.timeago.oneday.past=dün
 ml.timeago.xdays.past={0} gün önce
 ml.timeago.oneweek.past=bir hafta önce
+ml.timeago.xweeks.past={0} hafta önce
 ml.timeago.aboutamonth.past=yaklaşık bir ay önce
 ml.timeago.xmonths.past={0} ay önce
 ml.timeago.aboutayear.past=yaklaşık bir yıl önce
