--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
@@ -22,6 +22,7 @@ ml.timeago.xhours.past={0} ساعت پیش
 ml.timeago.oneday.past=دیروز
 ml.timeago.xdays.past={0} روز پیش
 ml.timeago.oneweek.past=یک هفته پیش
+ml.timeago.xweeks.past={0} هفته قبل
 ml.timeago.aboutamonth.past=حدود یک ماه پیش
 ml.timeago.xmonths.past={0} ماه پیش
 ml.timeago.aboutayear.past=حدود یک سال پیش
