--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
@@ -6,6 +6,7 @@ ml.timeago.xhours.past={0} jam yang lalu
 ml.timeago.oneday.past=kemarin
 ml.timeago.xdays.past={0} hari yang lalu
 ml.timeago.oneweek.past=seminggu yang lalu
+ml.timeago.xweeks.past={0} minggu yang lalu
 ml.timeago.aboutamonth.past=satu bulan yang lalu
 ml.timeago.xmonths.past={0} bulan yang lalu
 ml.timeago.aboutayear.past=satu tahun yang lalu
