Added message for future date applied to within one week

--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=بعد ساعة
 ml.timeago.xhours.future=بعد {0} ساعات
 ml.timeago.oneday.future=غدًا
 ml.timeago.xdays.future=بعد {0} أيام
+ml.timeago.oneweek.future=خلال اسبوع واحد
 ml.timeago.aboutamonth.future=بعد شهر
 ml.timeago.xmonths.future=بعد {0} شهور
 ml.timeago.aboutayear.future=بعد سنة
