--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=indenfor omkring en time
 ml.timeago.xhours.future=indenfor {0} timer
 ml.timeago.oneday.future=i morgen
 ml.timeago.xdays.future=indenfor {0} dage
+ml.timeago.oneweek.future=inden for en uge
 ml.timeago.aboutamonth.future=indenfor omkring en måned
 ml.timeago.xmonths.future=indenfor {0} måneder
 ml.timeago.aboutayear.future=indenfor omkring et år
