--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=innerhalb von etwa einer Stunde
 ml.timeago.xhours.future=innerhalb {0} Stunden
 ml.timeago.oneday.future=morgen
 ml.timeago.xdays.future=innerhalb {0} Tagen
+ml.timeago.oneweek.future=innerhalb einer woche
 ml.timeago.aboutamonth.future=innerhalb von etwa einem Monat
 ml.timeago.xmonths.future=innerhalb {0} Monaten
 ml.timeago.aboutayear.future=innerhalb von etwa einem Jahr
