--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=ordun bat barru
 ml.timeago.xhours.future={0} ordu barru
 ml.timeago.oneday.future=bihar
 ml.timeago.xdays.future={0} egun barru
+ml.timeago.oneweek.future=astebeteko epean
 ml.timeago.aboutamonth.future=hile bat barru
 ml.timeago.xmonths.future={0} hile barru
 ml.timeago.aboutayear.future=urte bat barru
