--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=dans environ une heure
 ml.timeago.xhours.future=dans {0} heures
 ml.timeago.oneday.future=demain
 ml.timeago.xdays.future=dans {0} jours
+ml.timeago.oneweek.future=d'ici une semaine
 ml.timeago.aboutamonth.future=environ un mois
 ml.timeago.xmonths.future=dans {0} mois
 ml.timeago.aboutayear.future=dans environ un an
