--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_pt.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=dentro de uma hora
 ml.timeago.xhours.future=dentro de {0} horas
 ml.timeago.oneday.future=amanh\u00E3
 ml.timeago.xdays.future=dentro de {0} dias
+ml.timeago.oneweek.future=dentro de uma semana
 ml.timeago.aboutamonth.future=dentro de um m\u00EAs
 ml.timeago.xmonths.future=dentro de {0} meses
 ml.timeago.aboutayear.future=dentro de um ano
