--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_en.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=within about an hour
 ml.timeago.xhours.future=within {0} hours
 ml.timeago.oneday.future=tomorrow
 ml.timeago.xdays.future=within {0} days
+ml.timeago.oneweek.future=within one week
 ml.timeago.aboutamonth.future=within about a month
 ml.timeago.xmonths.future=within {0} months
 ml.timeago.aboutayear.future=within about a year
