--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=dentro de una hora
 ml.timeago.xhours.future=dentro de {0} horas
 ml.timeago.oneday.future=ma\u00F1ana
 ml.timeago.xdays.future=dentro de {0} d\u00EDas
+ml.timeago.oneweek.future=dentro de una semana
 ml.timeago.aboutamonth.future=dentro de un mes
 ml.timeago.xmonths.future=dentro de {0} meses
 ml.timeago.aboutayear.future=dentro de un a\u00F1o
