--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
@@ -35,6 +35,7 @@ ml.timeago.aboutanhour.future=a circa un''ora
 ml.timeago.xhours.future=entro {0} ore
 ml.timeago.oneday.future=domani
 ml.timeago.xdays.future=entro {0} giorni
+ml.timeago.oneweek.future=entro una settimana
 ml.timeago.aboutamonth.future=entro circa un mese
 ml.timeago.xmonths.future=entro {0} mesi
 ml.timeago.aboutayear.future=entro circa un anno
