--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_ar.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=بعد {0} ساعات
 ml.timeago.oneday.future=غدًا
 ml.timeago.xdays.future=بعد {0} أيام
 ml.timeago.oneweek.future=خلال اسبوع واحد
+ml.timeago.xweeks.future=في غضون {0} أسابيع
 ml.timeago.aboutamonth.future=بعد شهر
 ml.timeago.xmonths.future=بعد {0} شهور
 ml.timeago.aboutayear.future=بعد سنة
