--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_da.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=indenfor {0} timer
 ml.timeago.oneday.future=i morgen
 ml.timeago.xdays.future=indenfor {0} dage
 ml.timeago.oneweek.future=inden for en uge
+ml.timeago.xweeks.future=inden for {0} uger
 ml.timeago.aboutamonth.future=indenfor omkring en måned
 ml.timeago.xmonths.future=indenfor {0} måneder
 ml.timeago.aboutayear.future=indenfor omkring et år
