--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_de.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=innerhalb {0} Stunden
 ml.timeago.oneday.future=morgen
 ml.timeago.xdays.future=innerhalb {0} Tagen
 ml.timeago.oneweek.future=innerhalb einer woche
+ml.timeago.xweeks.future=innerhalb von {0} wochen
 ml.timeago.aboutamonth.future=innerhalb von etwa einem Monat
 ml.timeago.xmonths.future=innerhalb {0} Monaten
 ml.timeago.aboutayear.future=innerhalb von etwa einem Jahr
