--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_es.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=dentro de {0} horas
 ml.timeago.oneday.future=ma\u00F1ana
 ml.timeago.xdays.future=dentro de {0} d\u00EDas
 ml.timeago.oneweek.future=dentro de una semana
+ml.timeago.xweeks.future=dentro de {0} semanas
 ml.timeago.aboutamonth.future=dentro de un mes
 ml.timeago.xmonths.future=dentro de {0} meses
 ml.timeago.aboutayear.future=dentro de un a\u00F1o
