--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_eu.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future={0} ordu barru
 ml.timeago.oneday.future=bihar
 ml.timeago.xdays.future={0} egun barru
 ml.timeago.oneweek.future=astebeteko epean
+ml.timeago.xweeks.future={0} aste barru
 ml.timeago.aboutamonth.future=hile bat barru
 ml.timeago.xmonths.future={0} hile barru
 ml.timeago.aboutayear.future=urte bat barru
