--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fa.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=حدود {0} ساعت دیگر
 ml.timeago.oneday.future=فردا
 ml.timeago.xdays.future=حدود {0} روز دیگر
 ml.timeago.oneweek.future=در طول یک هفته
+ml.timeago.xweeks.future=طی {0} هفته
 ml.timeago.aboutamonth.future=حدود یک ماه دیگر
 ml.timeago.xmonths.future=حدود {0} ماه دیگر
 ml.timeago.aboutayear.future=حدود یک سال دیگر
