--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_fr.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=dans {0} heures
 ml.timeago.oneday.future=demain
 ml.timeago.xdays.future=dans {0} jours
 ml.timeago.oneweek.future=d'ici une semaine
+ml.timeago.xweeks.future=dans {0} semaines
 ml.timeago.aboutamonth.future=environ un mois
 ml.timeago.xmonths.future=dans {0} mois
 ml.timeago.aboutayear.future=dans environ un an
