--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_hi.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future={0} घंटे के भीतर
 ml.timeago.oneday.future=आने वाला कल
 ml.timeago.xdays.future={0} दिनों के भीतर
 ml.timeago.oneweek.future=एक सप्ताह में
+ml.timeago.xweeks.future={0} सप्ताह के भीतर
 ml.timeago.aboutamonth.future=लगभग एक महीने के भीतर
 ml.timeago.xmonths.future={0} महीने के भीतर
 ml.timeago.aboutayear.future=लगभग एक साल के भीतर
