--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_in.properties
@@ -20,6 +20,7 @@ ml.timeago.xhours.future={0} jam
 ml.timeago.oneday.future=besok
 ml.timeago.xdays.future={0} hari
 ml.timeago.oneweek.future=dalam satu minggu
+ml.timeago.xweeks.future=dalam {0} minggu
 ml.timeago.aboutamonth.future=satu bulan
 ml.timeago.xmonths.future={0} bulan
 ml.timeago.aboutayear.future=sekitar satu tahun
