--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_it.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=entro {0} ore
 ml.timeago.oneday.future=domani
 ml.timeago.xdays.future=entro {0} giorni
 ml.timeago.oneweek.future=entro una settimana
+ml.timeago.xweeks.future=entro {0} settimane
 ml.timeago.aboutamonth.future=entro circa un mese
 ml.timeago.xmonths.future=entro {0} mesi
 ml.timeago.aboutayear.future=entro circa un anno
