--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_tr.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future={0} saat içinde
 ml.timeago.oneday.future=yarın
 ml.timeago.xdays.future={0} gün içinde
 ml.timeago.oneweek.future=bir hafta içinde
+ml.timeago.xweeks.future={0} hafta içinde
 ml.timeago.aboutamonth.future=yaklaşık bir ay içinde
 ml.timeago.xmonths.future={0} ay içinde
 ml.timeago.aboutayear.future=yaklaşık bir yıl içinde
