--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=在{0}小时内
 ml.timeago.oneday.future=明天
 ml.timeago.xdays.future=在{0}天内
 ml.timeago.oneweek.future=一星期内
+ml.timeago.xweeks.future=在{0}周内
 ml.timeago.aboutamonth.future=大约一个月内
 ml.timeago.xmonths.future=在{0}个月内
 ml.timeago.aboutayear.future=大约一年内
