--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_cs.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=do {0} hodin
 ml.timeago.oneday.future=zítra
 ml.timeago.xdays.future=do {0} dní
 ml.timeago.oneweek.future=do jednoho týdne
+ml.timeago.xweeks.future=do {0} týdnů
 ml.timeago.aboutamonth.future=do měsíce
 ml.timeago.xmonths.future=do {0} měsíců
 ml.timeago.aboutayear.future=do roka
