--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_nl.properties
@@ -37,6 +37,7 @@ ml.timeago.xhours.future=binnen {0} uur
 ml.timeago.oneday.future=morgen
 ml.timeago.xdays.future=binnen {0} dagen
 ml.timeago.oneweek.future=binnen een week
+ml.timeago.xweeks.future=binnen {0} weken
 ml.timeago.aboutamonth.future=binnen een maand
 ml.timeago.xmonths.future=binnen {0} maanden
 ml.timeago.aboutayear.future=binnen een jaar
