--- a/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh_TW.properties
+++ b/ta_library/src/main/resources/com/github/marlonlom/utilities/timeago/messages_zh_TW.properties
@@ -36,6 +36,7 @@ ml.timeago.xhours.future=在{0}小時內
 ml.timeago.oneday.future=明天
 ml.timeago.xdays.future=在{0}天內
 ml.timeago.oneweek.future=一星期內
+ml.timeago.xweeks.future=在{0}週內
 ml.timeago.aboutamonth.future=大約一個月內
 ml.timeago.xmonths.future=在{0}個月內
 ml.timeago.aboutayear.future=大約一年內
